# RMN_Auto

./: pyproject.toml
css/: style.css
htmlDirectory/: Car-Purchase-Form.html  Car-Sale-Form.html  Car-Sold-Warranty.html  all-credit-scores-report.html  all-payment-histories-report.html  all-purchased-cars-report.html  all-sold-cars-report.html  all-sold-warranties-output.html  allCreditScoresOutput.html  allPaymentHistoriesOutput.html  allPurchasedCarsOutput.html  allSoldCarsOutput.html  allSoldWarrantiesOutput.html  bankForm.html  bankFormOutput.html  bankReport.html  bankReportOutput.html  body.css  carPurchaseOutput.html  carSaleOutput.html  employment-information-report.html  employmentInfoOutput.html  login-page.html  paymentHistoryForm.html  register-page.html  soldWarrantyOutput.html  test-CSS-2.html  test-CSS-3.html  test-CSS.html  warrantyForm.html
rmn_experimenting/: auth.py  database.py  main.py  models.py  schemas.py
tests/: test_rmn_experimenting.py
