[tool.poetry]
name = "RMN_experimenting"
version = "0.1.0"
description = ""
authors = ["tish978 <satish.bisa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
hypercorn = "^0.13.2"
sqlmodel = "^0.0.6"
mysql-connector-python = "^8.0.28"
SQLAlchemy = "^1.4.35"
PyMySQL = "^1.0.2"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
